# tauri-bug-reproducer

./: README.md  package.json
cannot-resize-window/: README.md  package.json  pnpm-lock.yaml
cannot-resize-window/src/: App.tsx  style.css
cannot-resize-window/src-tauri/: Cargo.toml
cannot-resize-window/src-tauri/capabilities/: migrated.json
loses-focus-when-moving-the-window/: README.md  package.json
loses-focus-when-moving-the-window/src/: App.tsx
loses-focus-when-moving-the-window/src-tauri/: Cargo.toml  tauri.conf.json
src/: App.tsx
src-tauri/: tauri.conf.json
window-loses-its-shadow/: README.md  package.json  pnpm-lock.yaml
window-loses-its-shadow/src/: App.tsx
window-loses-its-shadow/src-tauri/: Cargo.toml  tauri.conf.json
window-loses-its-shadow/src-tauri/capabilities/: migrated.json
‌‌‌‌windows-css-blur-not-working-on-mica/: README.md  pnpm-lock.yaml
‌‌‌‌windows-css-blur-not-working-on-mica/src/: App.tsx  style.css
‌‌‌‌windows-css-blur-not-working-on-mica/src-tauri/: Cargo.toml  tauri.conf.json
‌‌‌‌windows-css-blur-not-working-on-mica/src-tauri/capabilities/: migrated.json
‌‌‌‌windows-css-blur-not-working-on-mica/src-tauri/src/: main.rs
